Default Level Change

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Engine/Maps/Templates/OpenWorld.OpenWorld
+EditorStartupMap=/Game/Maps/MainLevel.MainLevel
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -10,8 +10,8 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld.OpenWorld
-ServerDefaultMap=/Engine/Maps/Entry.Entry
+GameDefaultMap=/Game/Maps/MainLevel.MainLevel
+ServerDefaultMap=/Game/Maps/MainLevel.MainLevel
 GlobalDefaultGameMode=/Game/BP_GameMode.BP_GameMode_C
 GlobalDefaultServerGameMode=None
 
